# hybrid-record-matching

./: .gitignore  DOCUMENT_AI_OPTIONS.md  FINAL_ARCHITECTURE_README.md  README-NEXT.md  README.md  pyproject.toml
baseline_vector/: README.md  results.csv  vector_match_baseline.py
embedding_baseline/: README.md  embedding_match_baseline.py  results.csv
hybrid_matcher/: ARCHITECTURE.md  README.md  field_extraction.py  hybrid_matcher.py  results.csv  text_extraction.py
